--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,9 @@
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body {
-    background-color: ivory;
+    background-color: #aaa !important;;
   }
   
   h1 {
