--- a/mystyle.css
+++ b/mystyle.css
@@ -6,6 +6,14 @@ body {
     background-color: #aaa !important;;
   }
   
+  .main-content {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+}
+
   h1 {
     color: black;
     text-align: center;
