--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
+nav {
+  position: sticky;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   font-weight: 400 !important;
@@ -15,6 +19,10 @@ body {
     background-position: center;
     background-attachment: scroll;
     background-repeat: no-repeat;
+}
+
+.navbar-toggler {
+  padding: .25rem 0 !important;
 }
 
 .longer-animated {
@@ -38,12 +46,11 @@ header {
   padding: 150px 0 110px;
 }
   h1 {
-    color: black;
     text-align: center;
   }
 
   p {
-    color: black;
+    color: white !important;
     text-align: center;
   }
 
