--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 nav {
@@ -7,22 +7,25 @@ nav {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   font-weight: 400 !important;
   position: relative;
   overflow-y: auto;
 }
-  
-  .main-content {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://github.com/AtilG/AtilG.github.io/blob/main/pictures/photo-1473042904451-00171c69419d.jpeg?raw=true);
-    background-size: cover;
-    background-position: center;
-    background-attachment: scroll;
-    background-repeat: no-repeat;
+
+.main-content {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(https://github.com/AtilG/AtilG.github.io/blob/main/pictures/photo-1473042904451-00171c69419d.jpeg?raw=true);
+  background-size: cover;
+  background-position: center;
+  background-attachment: scroll;
+  background-repeat: no-repeat;
 }
 
 .navbar-toggler {
-  padding: .25rem 0 !important;
+  padding: 0.25rem 0 !important;
 }
 
 .longer-animated {
@@ -47,16 +50,16 @@ header {
 }
 
 h1 {
-    text-align: center;
-  }
+  text-align: center;
+}
 
 p {
   margin: 10px 0;
 }
 
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
