resolved issue with different resolution screen sizes not responding correctly to card sizes. fixed hyperlink text to match better with theme of website.

--- a/mystyle.css
+++ b/mystyle.css
@@ -35,6 +35,10 @@ body {
   animation-fill-mode: both;
 }
 
+.main-content a {
+  color: white !important;
+}
+
 .fadeout-overlay .mask:hover {
   opacity: 0;
 }
